Bug 511030 - Loopback (lo) device appears under connections
Summary: Loopback (lo) device appears under connections
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: 6.5.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-10-24 15:53 UTC by Oleg
Modified: 2025-10-29 16:12 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.2
Sentry Crash Report:


Attachments
lo device in network widget (23.90 KB, image/avif)
2025-10-24 15:53 UTC, Oleg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oleg 2025-10-24 15:53:06 UTC
Created attachment 186095 [details]
lo device in network widget

SUMMARY
Loopback (lo) devices started to appear under connections in both System Tray applet and network settings. Previously it would be hidden in other group

STEPS TO REPRODUCE
1. Update to Plasma 6.5
2. Look at network system tray widget

OBSERVED RESULT
Loopback (lo) device would appear in the list

EXPECTED RESULT
It shouldn't appear in system tray. Only (maybe) in network kcm

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.5.0
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0
Kernel Version: 6.17.4-4-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 9800X3D 8-Core Processor
Memory: 64 ГиБ of RAM (62.4 ГиБ usable)
Graphics Processor: AMD Radeon RX 6700 XT
Manufacturer: ASUS

ADDITIONAL INFORMATION
This is regression in Plasma 6.5.0
Comment 1 Nate Graham 2025-10-24 16:29:01 UTC
Can confirm.
Comment 4 Bug Janitor Service 2025-10-29 14:46:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-nm/-/merge_requests/481
Comment 5 Nate Graham 2025-10-29 16:12:00 UTC
Git commit 7d4a7e9b5aaa4ce137c263958277fbb83e6468c7 by Nate Graham.
Committed on 29/10/2025 at 14:44.
Pushed by ngraham into branch 'master'.

Return to not exposing loopback interfaces to the user

Appears to be an accidental change that snuck into
b9a06d50c0ff8bc333ba1ea7a80a22a95513a983 without anyone noticing.
FIXED-IN: 6.5.2

M  +0    -1    libs/models/networkmodelitem.cpp

https://invent.kde.org/plasma/plasma-nm/-/commit/7d4a7e9b5aaa4ce137c263958277fbb83e6468c7
Comment 6 Nate Graham 2025-10-29 16:12:21 UTC
Git commit cdf800e11aed21e151e6adda0a120df0ce19dfa1 by Nate Graham.
Committed on 29/10/2025 at 16:12.
Pushed by ngraham into branch 'Plasma/6.5'.

Return to not exposing loopback interfaces to the user

Appears to be an accidental change that snuck into
b9a06d50c0ff8bc333ba1ea7a80a22a95513a983 without anyone noticing.
FIXED-IN: 6.5.2


(cherry picked from commit 7d4a7e9b5aaa4ce137c263958277fbb83e6468c7)

Co-authored-by: Nate Graham <nate@kde.org>

M  +0    -1    libs/models/networkmodelitem.cpp

https://invent.kde.org/plasma/plasma-nm/-/commit/cdf800e11aed21e151e6adda0a120df0ce19dfa1