Return to not exposing loopback interfaces to the user

Appears to be an accidental change that snuck into
b9a06d50c0ff8bc333ba1ea7a80a22a95513a983 without anyone noticing.

BUG: 511030
FIXED-IN: 6.5.2